err/connect.py.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/connect'...
Compiling './lib/python3.5/site-packages/connect/client.py'...
***   File "./lib/python3.5/site-packages/connect/client.py", line 114
    raise ValueError(f'The track "{entry[0]}" is not in the release\'s "{entry[1]}" track list.')
                                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/connect/http.py'...
***   File "./lib/python3.5/site-packages/connect/http.py", line 116
    with open(f'{path}/{filename}', 'wb') as file:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/connect/release.py'...
***   File "./lib/python3.5/site-packages/connect/release.py", line 87
    return f'{self.artists} - {self.title}'
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/connect/track.py'...
***   File "./lib/python3.5/site-packages/connect/track.py", line 102
    return f'{self.artists} - {self.title}'
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/connect/utils.py'...
***   File "./lib/python3.5/site-packages/connect/utils.py", line 46
    return f'{self.RELEASE}/{release_id}/download?method=download&type={audio_format}'
                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/connect.py-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_get_all_catalog.py'...
***   File "./lib/python3.5/site-packages/tests/test_get_all_catalog.py", line 40
    print(f'There are {len(releases)} total releases.')
                                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_get_catalog.py'...
***   File "./lib/python3.5/site-packages/tests/test_get_catalog.py", line 37
    print(f'\n[connect.Client.get_release]\n{release.title} by {release.artists} had been release on {release.release_date} and has the following track(s):')
                                                                                                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test_search.py'...
***   File "./lib/python3.5/site-packages/tests/test_search.py", line 39
    print(f'[{release.catalog_id}] Released on {release.release_date}, has {len(release.tracks)} track(s) and with the title {release.title}')
                                                                                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
